# kleuren

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Doxyfile  LICENSE  Makefile  Makefile.am  README.md  README_8md.html  annotated.html  arg__parse_8cpp.html  arg__parse_8h.html  arg__parse_8h_source.html  args_8cpp.html  args_8h.html  args_8h_source.html  bubble_8cpp.html  bubble_8h.html  bubble_8h_source.html  bubble__builder_8cpp.html  bubble__builder_8h.html  bubble__builder_8h_source.html  bubble__manager_8cpp.html  bubble__manager_8h.html  bubble__manager_8h_source.html  classArgParse-members.html  classArgParse.html  classArgs-members.html  classArgs.html  classBubble-members.html  classBubble.html  classBubbleBuilder-members.html  classBubbleBuilder.html  classBubbleManager-members.html  classBubbleManager.html  classColor-members.html  classColor.html  classColorManager-members.html  (+44 more)
docs/: Doxyfile
docs/html/: index.html  md_README.html  pages.html
docs/html/search/: all_0.js  searchdata.js
docs/latex/: md_README.tex  refman.tex
inc/: abstract_graph.h  arg_parse.h  args.h  bubble.h  bubble_builder.h  bubble_manager.h  bubble_stats.h  color.h  color_manager.h  color_set.h  driver.h  filter.h  graph.h  graph_builder.h  kmer_bank.h  path.h  vertex.h
kleuren/: graph.py
scripts/: bubble.py  bubble_to_msa.py  build_bft.smk  build_bft.snake  build_bwtdisk.sh  compare_trees.sh  concatenate_bubbles.py  construct_tree.sh  gen_color_file.sh  get_drosophila_data.sh  run_kleuren.sh  vectorize_msa.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  (+13 more)
src/: CMakeLists.txt  abstract_graph.cpp  arg_parse.cpp  args.cpp  bubble.cpp  bubble_builder.cpp  bubble_manager.cpp  bubble_stats.cpp  color.cpp  color_manager.cpp  color_set.cpp  driver.cpp  filter.cpp  graph.cpp  graph_builder.cpp  kmer_bank.cpp  main.cpp  path.cpp  vertex.cpp
test/: Makefile
test/data/: 0.fasta  1.fasta  10.fasta  11.fasta  2.fasta  3.fasta  4.fasta  5.fasta  6.fasta  7.fasta  8.fasta  9.fasta  colors.txt  drosophila_true_tree.nwk  ebola.bwtdisk  flu.bwtdisk  marburg.bwtdisk  marburg.fa  super_viruses.count.txt  super_viruses.kmers.txt  toy1.bwtdisk  toy1.fa  toy1.txt  toy2.bwtdisk  toy2.fa  toy2.txt  toy3.bwtdisk  toy3.fa  toy4.bwtdisk  toy4.fa  viruses.colors.txt  zika.bwtdisk  zika.fasta
test/data/sim_population/: sim_population.colors.txt  sim_population.count.txt  tree.dot
test/data/sim_population/generation-1/: generation-1.child-0.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-1.child-0.2:gi|226377833|ref|NC_012532.1|:0.fa  mutants.generation-1.child-0.vcf
test/data/sim_population/generation-2/: generation-2.child-0.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-2.child-0.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-2.child-1.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-2.child-1.2:gi|226377833|ref|NC_012532.1|:0.fa  mutants.generation-2.child-0.vcf  mutants.generation-2.child-1.vcf
test/data/sim_population/generation-3/: generation-3.child-0.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-0.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-1.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-1.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-2.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-2.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-3.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-3.child-3.2:gi|226377833|ref|NC_012532.1|:0.fa  mutants.generation-3.child-0.vcf  mutants.generation-3.child-1.vcf  mutants.generation-3.child-2.vcf  mutants.generation-3.child-3.vcf
test/data/sim_population/generation-4/: generation-4.child-0.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-0.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-1.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-1.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-2.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-2.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-3.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-3.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-4.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-4.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-5.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-5.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-6.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-6.2:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-7.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-4.child-7.2:gi|226377833|ref|NC_012532.1|:0.fa  mutants.generation-4.child-0.vcf  mutants.generation-4.child-1.vcf  mutants.generation-4.child-2.vcf  mutants.generation-4.child-3.vcf  mutants.generation-4.child-4.vcf  mutants.generation-4.child-5.vcf  mutants.generation-4.child-6.vcf  mutants.generation-4.child-7.vcf
test/data/sim_population/generation-5/: generation-5.child-0.1:gi|226377833|ref|NC_012532.1|:0.bwtdisk  generation-5.child-0.1:gi|226377833|ref|NC_012532.1|:0.fa  generation-5.child-0.2:gi|226377833|ref|NC_012532.1|:0.bwtdisk  generation-5.child-0.2:gi|226377833|ref|NC_012532.1|:0.fa  (+76 more)
test/data/small/: 1.fasta  1.fasta.jf_0  1.kmers.txt  2.fasta  2.fasta.jf_0  2.kmers.txt  3.fasta  3.fasta.jf_0  3.kmers.txt  4.fasta  4.fasta.jf_0  4.kmers.txt  bft.out  colors.txt  kmers.out
test/scripts/: count_kmers.sh  gen_color_file.sh  gen_population.sh  run_sim.sh
test/src/: CMakeLists.txt  abstract_graph.cpp  bubble_builder.cpp  color.cpp  color_manager.cpp  color_set.cpp  graph.cpp  kmer_bank.cpp  path.cpp
